--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ html, body {
   margin: 0 auto;
   font-family: "Lato", sans-serif; }
 
-h2, h3 {
+h1, h3 {
   color: #333;
   margin: 0; }
 
 #wrapper {
-  width: 60%;
+  width: 50%;
   margin: 20px auto 30px auto; }
 
 #infoentry {
@@ -54,8 +54,9 @@ section {
 .delete {
   color: red; }
 
-h2 {
-  margin: 10px 0 30px 0; }
+h1 {
+  margin: 20px 8px 30px 8px;
+  font-size: 30px; }
 
 form {
   margin: 0;
@@ -63,10 +64,12 @@ form {
 
 label, input {
   display: block;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: 90%; }
 
 label {
-  color: #333; }
+  color: #333;
+  text-align: left; }
 
 input {
   display: block;
@@ -79,16 +82,21 @@ input {
 
 #submitbutton {
   height: 40px;
-  width: 90px;
+  width: 60px;
   background-color: #367AB7;
   border: none;
   border-radius: 4px;
   color: white;
-  margin-bottom: 10px; }
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: bold; }
+  #submitbutton:hover {
+    background-color: #065092;
+    color: #F8DE31; }
 
 footer {
   text-align: left;
-  font-size: 13px;
+  font-size: 11px;
   margin-top: 50px;
   padding-top: 10px;
   border-top: 2px solid rgba(226, 221, 221, 0.67); }
