--- a/style.scss
+++ b/style.scss
@@ -26,15 +26,15 @@ h1, h3 {
     display: flex;
     flex-direction: row;;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 30px 20px;
 }
 
 section {
     min-height: 35%;
     margin: 25px auto;
-    background-color: #E8E9EC;
+    background-color: #EDEEF2;
     text-align: center;
     border-radius: 4px;
 }
@@ -50,8 +50,12 @@ section {
     height: 55px;
     width: 95px;
     padding: 5px;
-    margin: 5px;
+    margin: 8px;
     background-color: white;
+
+    -webkit-box-shadow: 4px 4px 17px -2px rgba(0,0,0,0.76);
+    -moz-box-shadow: 4px 4px 17px -2px rgba(0,0,0,0.76);
+    box-shadow: 4px 4px 17px -2px rgba(0,0,0,0.76);
 
     h3 {
         width: 100%;
@@ -68,7 +72,7 @@ section {
 }
 
 h1 {
-    margin: 20px 8px 30px 8px;
+    margin: 20px 8px 20px 8px;
     font-size: 30px;
 }
 
